// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransferLists Component render renders TransferLists component when assigned transferlists and flow transferlists are in loading state 1`] = `
<React.Fragment>
  <div>
    <div>
      <FormattedMessage
        defaultMessage="Checking Interaction Transfer Lists Availability..."
        id="app.containers.TransferMenu.checkingInteractionTransferLists"
        values={Object {}}
      />
    </div>
    <IconSVG
      id="interactionTransferListsLoadingIcon"
      name="loading"
      style={
        Object {
          "height": "40px",
          "width": "40px",
        }
      }
    />
  </div>
  <div>
    <div>
      <FormattedMessage
        defaultMessage="Checking Assigned Transfer Lists Availability..."
        id="app.containers.TransferMenu.checkingUserAssignedTransferLists"
        values={Object {}}
      />
    </div>
    <IconSVG
      id="assignedTransferListsLoadingIcon"
      name="loading"
      style={
        Object {
          "height": "40px",
          "width": "40px",
        }
      }
    />
  </div>
</React.Fragment>
`;

exports[`TransferLists Component render renders TransferLists component when there are no assigned transferlists and flow transfer lists 1`] = `<React.Fragment />`;

exports[`TransferLists Component render renders TransferLists component with user assinged transferlists and interaction transferlists for the non-voice interaction 1`] = `
<React.Fragment>
  <div
    style={
      Object {
        "marginTop": "12px",
      }
    }
  >
    <div
      id="interTransferListsCollapExpandBtn"
      key="interactionTransferLists"
      onClick={[Function]}
      style={
        Array [
          Object {
            ":focus": Object {
              "backgroundColor": "#23cdf4",
              "color": "#FFFFFF",
              "outline": "none",
            },
            ":hover": Object {
              "backgroundColor": "#23cdf4",
              "color": "#FFFFFF",
            },
            "borderRadius": "3px",
            "color": "rgb(151, 151, 151)",
            "cursor": "pointer",
            "display": "flex",
            "fontSize": "15px",
            "fontWeight": "bold",
            "marginBottom": "0px !important",
            "marginTop": "12px",
          },
          Object {
            "marginTop": "35px",
          },
        ]
      }
    >
      <FormattedMessage
        defaultMessage="Transfer lists for this Interaction"
        id="app.containers.TransferMenu.interactionTransferLists"
        values={Object {}}
      />
      <Icon
        name="caret"
        style={
          Array [
            Object {
              "opacity": ".5",
            },
            Object {
              "flexShrink": "0",
              "fontWeight": "600",
              "height": "8px",
              "marginLeft": "auto",
              "marginRight": "4px",
              "marginTop": "4px",
              "transform": "rotate(180deg)",
              "width": "13.33px",
            },
          ]
        }
      />
    </div>
    <div
      key="interactionTransferList-mockNonVoiceTransferListId"
      style={
        Object {
          "marginTop": "12px",
        }
      }
    >
      <div
        className="bigSpacer"
        style={
          Object {
            "borderBottom": "1px solid #e6e6e6",
            "bottom": "18px",
            "display": "inline-block",
            "height": "2px",
            "position": "relative",
            "width": "100%",
          }
        }
      />
      <div
        id="interactionTransferList-0"
        key="interactionTransferList-mockNonVoiceTransferListId-title"
        onClick={[Function]}
        style={
          Object {
            ":focus": Object {
              "backgroundColor": "#23cdf4",
              "color": "#FFFFFF",
              "outline": "none",
            },
            ":hover": Object {
              "backgroundColor": "#23cdf4",
              "color": "#FFFFFF",
            },
            "borderRadius": "3px",
            "cursor": "pointer",
            "display": "flex",
            "fontSize": "15px",
            "fontWeight": "bold",
            "marginBottom": "0px !important",
            "marginTop": "12px",
          }
        }
        title="mockNonTransferListName"
      >
        <span
          className="tranferListName"
          style={
            Object {
              "flexBasis": "100%",
              "overflow": "hidden",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
        >
          mockNonTransferListName
        </span>
        <Icon
          name="caret"
          style={
            Object {
              "flexShrink": "0",
              "height": "8px",
              "marginLeft": "auto",
              "marginRight": "4px",
              "marginTop": "4px",
              "transition": "transform 0.5s",
              "width": "13.33px",
            }
          }
        />
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "marginTop": "12px",
      }
    }
  >
    <div
      id="assignedTransferListsCollapExpandBtn"
      key="assignedTransferLists"
      onClick={[Function]}
      style={
        Array [
          Object {
            ":focus": Object {
              "backgroundColor": "#23cdf4",
              "color": "#FFFFFF",
              "outline": "none",
            },
            ":hover": Object {
              "backgroundColor": "#23cdf4",
              "color": "#FFFFFF",
            },
            "borderRadius": "3px",
            "color": "rgb(151, 151, 151)",
            "cursor": "pointer",
            "display": "flex",
            "fontSize": "15px",
            "fontWeight": "bold",
            "marginBottom": "0px !important",
            "marginTop": "12px",
          },
          Object {
            "marginTop": "35px",
          },
        ]
      }
    >
      <FormattedMessage
        defaultMessage="Transfer lists assigned to you"
        id="app.containers.TransferMenu.assignedTransferLists"
        values={Object {}}
      />
      <Icon
        name="caret"
        style={
          Array [
            Object {
              "opacity": ".5",
            },
            Object {
              "flexShrink": "0",
              "fontWeight": "600",
              "height": "8px",
              "marginLeft": "auto",
              "marginRight": "4px",
              "marginTop": "4px",
              "transform": "rotate(180deg)",
              "width": "13.33px",
            },
          ]
        }
      />
    </div>
    <div
      key="mockNonVoiceTransferListId"
      style={
        Object {
          "marginTop": "12px",
        }
      }
    >
      <div
        className="bigSpacer"
        style={
          Object {
            "borderBottom": "1px solid #e6e6e6",
            "bottom": "18px",
            "display": "inline-block",
            "height": "2px",
            "position": "relative",
            "width": "100%",
          }
        }
      />
      <div
        id="transferList-0"
        key="mockNonVoiceTransferListId-title"
        onClick={[Function]}
        style={
          Object {
            ":focus": Object {
              "backgroundColor": "#23cdf4",
              "color": "#FFFFFF",
              "outline": "none",
            },
            ":hover": Object {
              "backgroundColor": "#23cdf4",
              "color": "#FFFFFF",
            },
            "borderRadius": "3px",
            "cursor": "pointer",
            "display": "flex",
            "fontSize": "15px",
            "fontWeight": "bold",
            "marginBottom": "0px !important",
            "marginTop": "12px",
          }
        }
        title="mockNonTransferListName"
      >
        <span
          className="transferListName"
          style={
            Object {
              "flexBasis": "100%",
              "overflow": "hidden",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
        >
          mockNonTransferListName
        </span>
        <Icon
          name="caret"
          style={
            Object {
              "flexShrink": "0",
              "height": "8px",
              "marginLeft": "auto",
              "marginRight": "4px",
              "marginTop": "4px",
              "transition": "transform 0.5s",
              "width": "13.33px",
            }
          }
        />
      </div>
    </div>
  </div>
</React.Fragment>
`;

exports[`TransferLists Component render renders TransferLists component with user assinged transferlists and interaction transferlists for the voice interaction 1`] = `
<React.Fragment>
  <div>
    <div
      id="interTransferListsCollapExpandBtn"
      key="interactionTransferLists"
      onClick={[Function]}
      style={
        Array [
          undefined,
          Object {
            "marginTop": "35px",
          },
        ]
      }
    >
      <FormattedMessage
        defaultMessage="Transfer lists for this Interaction"
        id="app.containers.TransferMenu.interactionTransferLists"
        values={Object {}}
      />
      <Icon
        name="caret"
        style={
          Array [
            Object {
              "opacity": ".5",
            },
            undefined,
          ]
        }
      />
    </div>
    <div
      key="interactionTransferList-mockVoiceTransferListId"
    >
      <div
        className="bigSpacer"
      />
      <div
        id="interactionTransferList-0"
        key="interactionTransferList-mockVoiceTransferListId-title"
        onClick={[Function]}
        title="mockVoiceTransferListName"
      >
        <span
          className="tranferListName"
          style={
            Object {
              "flexBasis": "100%",
              "overflow": "hidden",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
        >
          mockVoiceTransferListName
        </span>
        <Icon
          name="caret"
        />
      </div>
    </div>
  </div>
  <div>
    <div
      id="assignedTransferListsCollapExpandBtn"
      key="assignedTransferLists"
      onClick={[Function]}
      style={
        Array [
          undefined,
          Object {
            "marginTop": "35px",
          },
        ]
      }
    >
      <FormattedMessage
        defaultMessage="Transfer lists assigned to you"
        id="app.containers.TransferMenu.assignedTransferLists"
        values={Object {}}
      />
      <Icon
        name="caret"
        style={
          Array [
            Object {
              "opacity": ".5",
            },
            undefined,
          ]
        }
      />
    </div>
    <div
      key="mockVoiceTransferListId"
    >
      <div
        className="bigSpacer"
      />
      <div
        id="transferList-0"
        key="mockVoiceTransferListId-title"
        onClick={[Function]}
        title="mockVoiceTransferListName"
      >
        <span
          className="transferListName"
          style={
            Object {
              "flexBasis": "100%",
              "overflow": "hidden",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
            }
          }
        >
          mockVoiceTransferListName
        </span>
        <Icon
          name="caret"
        />
      </div>
    </div>
  </div>
</React.Fragment>
`;
